# meridian

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NOTICE  README.md  answers.example.env  deploy-pubkey.pub  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: celery_app.py  cli.py  config.py  db.py  main.py  metrics.py  settings_routes.py  tokens_routes.py
app/admin/: appeals_routes.py  credentials_routes.py  fail2ban.py  fail2ban_routes.py  health.py  health_routes.py  integrations_routes.py  log_shipping_routes.py  network_routes.py  policy_routes.py  queues.py  queues_routes.py  retention_routes.py  routes.py  scope_routes.py  snmp_routes.py  updates_routes.py  users_api.py  vuln_routes.py
app/api/: v1.py
app/approvals/: engine.py  routes.py
app/audit/: logger.py  redact.py
app/auth/: ad_login.py  csrf.py  deps.py  lockout_appeal.py  mfa.py  password.py  permissions.py  recovery.py  routes.py  session_manager.py
app/branding/: assets.py  routes.py
app/certs/: csr.py  parser.py  routes.py  watchlist.py
app/devices/: __init__.py  backup.py  connection.py  routes.py
app/directory/: ldap_client.py  role_map.py  routes.py  writes.py
app/dns/: axfr.py  crtsh.py  dig.py  dnssec.py  mail_auth.py  propagation.py  resolver_routes.py  reverse.py  rndc_tool.py  routes.py  trace.py  whois_tool.py  zone_health.py
app/files/: routes.py  storage.py
app/integrity/: hmac_chain.py
app/jobs/: __init__.py  ad.py  backup.py  cert.py  db.py  devices.py  health.py  integrity.py  oss.py  password.py  reports.py  retention.py  scheduler.py  upgrade.py  vuln.py
app/links/: routes.py
app/logging/: shipper.py
app/messages/: routes.py
app/models/: __init__.py  audit.py  base.py  branding.py  cert.py  device.py  directory.py  file.py  important_link.py  license.py  log_shipping.py  message.py  monitor.py  network_config.py  notification.py  report.py  resolver.py  runbook.py  scope.py  secret.py  session.py  snmp.py  threat_intel_integration.py  threat_intel_source.py  updates.py  user.py  vuln.py  webhook.py
app/monitors/: collector.py  incidents.py  probes.py  routes.py
app/net/: tls.py
app/network/: diagnostics.py  http_test.py  pcap.py  ping.py  port_scan.py  routes.py  scope.py  snmp.py  subnet_calc.py  traceroute.py
app/notifications/: dispatcher.py  routes.py
app/reports/: __init__.py  cron.py  generators.py  renderers.py  routes.py  runner.py
app/runbooks/: __init__.py  engine.py  routes.py  tools.py
app/safety/: limits.py
app/sandbox/: runner.py
app/secrets_vault/: vault.py
app/system/: health_probes.py
app/templates/: _admin_tabs.html  _logo.html  _page_docs_link.html  _sidebar.html  _topbar.html  admin.html  admin_appeals.html  admin_branding.html  admin_credentials.html  admin_devices.html  admin_health.html  admin_integrations.html  admin_network.html  admin_queues.html  admin_scope.html  admin_settings.html  admin_updates.html  admin_users.html  admin_vuln.html  admin_webhooks.html  approvals.html  base.html  certificates.html  dashboard.html  directory.html  dns_tools.html  files.html  forgot_password.html  links.html  locked_out.html  login.html  messages.html  monitors.html  network_tools.html  reports.html  runbooks.html  settings.html  threat_intel.html  wizards.html
app/ui/: routes.py
app/users/: gdpr.py
app/webhooks/: __init__.py  dispatcher.py  routes.py
app/wizards/: __init__.py  dns_wizards.py  engine.py  integration_wizards.py  mail_wizards.py  network_wizards.py  resolve_fail.py  routes.py  ssl_wizards.py
brand/: brand-showcase.html  render-pngs.py
config/: README.md  nginx.conf.template  nginx.snippets.meridian_proxy.conf
config/apparmor/: opt.meridian.app
config/bind9/: named.conf.template
config/fail2ban/: jail.meridian.conf
config/logrotate/: meridian
config/postgresql/: postgresql.conf.overlay
config/redis/: redis.conf.overlay
config/ssh/: sshd_config.d.meridian.conf.template
config/sudoers.d/: meridian-credentials  meridian-deploy  meridian-fail2ban  meridian-network
config/sysctl.d/: 99-meridian.conf
config/systemd/: meridian-app.service.template  meridian-beat.service.template  meridian-celery.service.template
config/ufw/: meridian.rules.template
config/valkey/: valkey.conf.overlay
db/: schema.sql
db/migrations/: 0001_add_network_devices.sql  0002_seed_network_ping_permission.sql  0003_add_scheduled_reports.sql  0004_add_network_config.sql  0005_add_credentials_permission.sql  0006_expand_device_kinds.sql  0007_add_health_auto_repair_job.sql  0008_add_metrics_permission.sql  0009_add_mail_auth_wizards.sql  0010_user_recovery_contacts.sql  0011_lockout_appeals.sql  0012_monitor_safety_floor.sql  0013_branding_monitors_schema_drift.sql  0014_drop_license_subsystem.sql  README.md
docs/: MERIDIAN-NIP-MIB.txt  index.html  meridiannip.md  walkthrough-findings.md
docs/admin/: accounts.md  backup-restore.html  branding.html  cli-tools.md  devices.html  health.html  integrations.html  lockout-recovery.md  overview.html  recovery.md  scheduled-jobs.html  scope.html  (+5 more)
mockups/: mockup_login_page.html  mockups_all.html
scripts/: README.md  apply-network-config.sh  audit-tls.sh  backfill-row-hashes.py  backup.sh  build-deb.sh  build-ova.sh  build-release.sh  doctor.sh  generate-docs-stubs.py  health_check.sh  hyperv-bootstrap.ps1  meridian-nip  meridian-snmp-agent.py  meridian-systemctl.sh  migrate.sh  preflight.sh  publish-apt.sh  regenerate-snmpd.sh  repack-preseed-iso.sh  reset-install.sh  restore.sh  rotate-credential.sh  setup_luks.sh  smoke-backup-restore.sh  snmpd-meridian.conf  system-update.sh  unify-docs-sidebar.py  wal_archive.sh  wire-docs-links.py
tests/: conftest.py  test_app_build.py  test_audit_redact.py  test_backup_restore.py  test_metrics.py  test_password.py  test_safety_limits.py  test_smoke_imports.py  test_subnet_calc.py
(+31 files in other folders)
