# Meridian is shipped as a Debian install-script payload, not a wheel —
# this pyproject.toml exists to configure lint + type tooling only.
# `pip install -r requirements.txt` is still the install path.

[project]
name = "meridian"
version = "1.0.0"
description = "Meridian · Network Intelligence Platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    "app/templates/**",
    "app/static/**",
    "docs/**",
]

[tool.ruff.lint]
# Pragmatic rule set: pyflakes, bugbear, imports, string formatting bugs.
# No whitespace/quote flamewars.
select = ["E", "F", "W", "B", "I", "UP", "PL", "C4", "S", "DTZ", "RUF"]
ignore = [
    "E501",     # line-length handled by formatter, not linter
    "E701",     # `if x: continue` style — readable enough
    "E702",     # multiple statements with semicolon — same call
    "E741",     # ambiguous `l` — local convention, rename batch is a separate pass
    "E402",     # module-level import not at top — intentional for some circular-import workarounds
    "PLR0911",  # too many returns — readable in our route/policy code
    "PLR0912",  # too many branches — same
    "PLR0915",  # too many statements — same
    "PLR0913",  # "too many args" — common for FastAPI Depends()
    "PLR2004",  # magic values — spec has many thresholds (30/14/7 days, etc.)
    "PLR5501",  # `else: if` style — readable
    "PLW0603",  # global statement — used for session/engine singletons
    "PLW1510",  # subprocess.run without explicit check — intentional in many call sites
    "PLW2901",  # loop var reassigned — `.strip()` pattern is common
    "S101",     # assert
    "S105",     # "auth_secret" param name flagged as hardcoded password — false positive
    "S110",     # try-except-pass — used in best-effort cleanup paths
    "S112",     # try-except-continue — same
    "S311",     # pseudo-random — we use secrets where it matters, random where it doesn't
    "S603",     # subprocess call with validated argv
    "S607",     # partial path — allowed binaries are known absolute paths
    "S608",     # allowing f-strings in SQL where they're wrapped in text()
    "B904",     # raise without `from` in except — noisy, separate pass
    "DTZ003",   # utcnow() — tz-aware migration is gradual
    "DTZ005",   # datetime.now() — tz-aware usage is already the norm
    "B008",     # default arg factories — FastAPI Depends() is an exception
    "RUF001",   # ambiguous unicode (×, –) — present in some docstrings on purpose
    "RUF002",   # same, for docstrings
    "UP007",    # "X | Y" type annotation — keep explicit Union for readability
    "UP037",    # quoted type annotation — used for forward refs
    "UP038",    # `isinstance(x, A | B)` — needs 3.10+; tuple form reads fine
    "F841",     # unused local — common in debug-friendly assignments
    "B007",     # unused loop var — `for _k, v in items()` is more readable than slicing
    "C402",     # generator → dict-comp — stylistic
    "C408",     # `tuple()` literal — sometimes deliberate for readability
    "RUF005",   # list concat vs splat — stylistic
]

[tool.ruff.lint.per-file-ignores]
"app/cli.py" = ["T201"]            # print() is fine in a CLI
"scripts/*.sh" = []                 # shellcheck runs separately

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
# Type-check app/ only — schema.sql, scripts, docs aren't Python.
files = ["app"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that hit the DB or network",
]
